--- a/cuahang/pom.xml
+++ b/cuahang/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>cuahang</artifactId>
+	<artifactId>NvkCuahang</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>cuahang</name>
 	<description>Demo project for Spring Boot</description>
