--- a/cuahang/src/main/resources/application.properties
+++ b/cuahang/src/main/resources/application.properties
@@ -1,14 +1,20 @@
 spring.application.name=cuahang
-spring.datasource.url=jdbc:mysql://localhost:3306/cua_hang_linh_kien?useSSL=false&serverTimezone=UTC
+
+spring.datasource.url=jdbc:mysql://localhost:3306/linhkien?useSSL=false&autoReconnect=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=dAviE504&
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.connection-timeout=20000
 
-server.port=8080
-spring.thymeleaf.encoding=UTF-8
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.jdbc.core=DEBUG
+spring.web.resources.cache.period=0
